--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: "." 
 
 website:
-  title: "YOUR NAME"
+  title: "Brendan Style"
   navbar:
     # background: "#1c4982"
     pinned: true
@@ -12,7 +12,7 @@ website:
         href: blog-listing.qmd
             
   page-footer: 
-    center: "Powered with GitHub, Quarto, and Jupyter Notebook<br>© YOUR NAME, 2025"
+    center: "Powered with GitHub, Quarto, and Jupyter Notebook<br>© Brendan Style, 2025"
 
 format:
   html:
