--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,14 @@ website:
     left:
       - text: Blog
         href: blog-listing.qmd
+      - text: Project
+        href: danl_proj_nba.ipynb
+      - text: Python Data Analysis
+        menu:
+          - text: Pandas Basics
+            href: pandas_basics.ipynb
+          - text: Seaborn Basics
+            href: seaborn_basics.ipynb
             
   page-footer: 
     center: "Powered with GitHub, Quarto, and Jupyter Notebook<br>© Brendan Style, 2025"
